Implementação  - mediaGolsPorJogo Alteração - getDayOfWeek(), tabela, placarMenosRepetido